[package]
name = "smithay-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cgmath = "0.18"
egui = "0.19.0"
egui_glow = "0.19.0"
egui_extras = { version = "0.19.0", optional = true }
img = { version = "0.24", default-features = false, optional = true, package = "image" }
memoffset = "0.6"
lazy_static = { version = "1.4.0", optional = true }
slog = { version = "2.7.0", optional = true }
xkbcommon = "0.4"

[dependencies.smithay]
version = "0.3"
git = "https://github.com/Smithay/smithay.git"
rev = "b297c93edc"
default-features = false
features = ["renderer_glow", "wayland_frontend"]

[features]
default = ["default_fonts", "desktop_integration"]
# Let egui bundle some fonts by default.
default_fonts = ["egui/default_fonts"]
desktop_integration = ["smithay/desktop"]
image = ["egui_extras", "img"]
svg = ["image", "egui_extras/svg"]
png = ["image", "egui_extras/image", "img/png"]
jpg = ["image", "egui_extras/image", "img/jpeg"]

[dev-dependencies]
anyhow = "1.0"
egui_demo_lib = "0.19"
slog = "2.7"
slog-term = "2.9"
slog-scope = "4.4"
slog-stdlog = "4.1"

[dev-dependencies.smithay]
version = "0.3"
git = "https://github.com/Smithay/smithay.git"
rev = "b297c93edc"
default-features = false
features = ["backend_winit", "slog-stdlog"]
