[package]
name = "smithay-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cgmath = "0.18"
egui = "0.30"
egui_glow = "0.30"
egui_extras = { version = "0.30", optional = true }
img = { version = "0.25", default-features = false, optional = true, package = "image" }
memoffset = "0.9"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
xkbcommon = "0.8"

[dependencies.smithay]
#version = "0.5"
git = "https://github.com/smithay/smithay"
rev = "a503d98"
default-features = false
features = ["renderer_glow", "wayland_frontend"]

[features]
default = ["default_fonts", "desktop_integration"]
# Let egui bundle some fonts by default.
default_fonts = ["egui/default_fonts"]
desktop_integration = ["smithay/desktop"]
image = ["egui_extras", "img"]
svg = ["image", "egui_extras/svg"]
png = ["image", "egui_extras/image", "img/png"]
jpg = ["image", "egui_extras/image", "img/jpeg"]

[dev-dependencies]
anyhow = "1.0"
egui_demo_lib = "0.30"
tracing-subscriber = "0.3"

[dev-dependencies.smithay]
#version = "0.5"
git = "https://github.com/smithay/smithay"
rev = "a503d98"
default-features = false
features = ["backend_winit"]
